refactor post request to accept body without id cause its generated
